--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -294,7 +294,7 @@ twopop <- ggplot(data = pop_data,
 ggsave(filename = "ch_samples/images/sex_pops.png", dpi = 300, width = 8, height = 6)
 ```
 
-```{r sexpop, echo=FALSE, out.width="95%", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
+```{r sexpop, echo=FALSE, out.width="95%", fig.scap = "Illustration of standardized mean difference of 1.49", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
 knitr::include_graphics("ch_samples/images/sex_pops.png")
 ```
 
