--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -74,7 +74,7 @@ In this chapter we will walk you though the steps from data collection, data ent
 It's critical that you don't think of the analysis of your data as being completely removed from the data collection and data entry choices you make. Poor choices at the data collection and data entry stage can make your life substantially more complicated when it comes time to write the pre-processing script that will convert your raw data to analytic data. The mantra of this chapter is *begin with the end in mind*.
 
 
-```{r pipeline, echo = FALSE, out.width="85%", fig.cap = "Data science pipeline by Roger Peng."}
+```{r pipeline, echo = FALSE, out.width="85%", fig.cap = "Data science pipeline by Roger Peng"}
 knitr::include_graphics("ch_enter_load/images/pipeline.png")
 ```
 
