--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -294,7 +294,7 @@ twopop <- ggplot(data = pop_data,
 ggsave(filename = "ch_samples/images/sex_pops.png", dpi = 300, width = 8, height = 6)
 ```
 
-```{r sexpop, echo=FALSE, out.width="95%", fig.scap = "Illustration of standardized mean difference of 1.49", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
+```{r sexpop, echo=FALSE, out.width="95%", fig.scap = "Illustration of standardized mean difference of $\\delta =1.49$", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
 knitr::include_graphics("ch_samples/images/sex_pops.png")
 ```
 
@@ -353,19 +353,19 @@ We have a sample variance for males () and a sample variance for females (). We 
 
 \newpage
 
-```{r pool1, echo=FALSE, out.width="80%", fig.scap="Estimating population variance with sample variances", fig.cap="The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. "}
+```{r pool1, echo=FALSE, out.width="80%", fig.scap="Estimating population variances with sample variances", fig.cap="Estimating population variances with sample variances. The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. "}
 knitr::include_graphics("ch_samples/images/pool1.png")
 ```
 
 \vspace{25mm}
 
-```{r pool2, echo=FALSE, out.width="80%", fig.scap="Sample variances of estimates of the sample population variance.", fig.cap="We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.", }
+```{r pool2, echo=FALSE, out.width="80%", fig.scap="Two estimates of a single population variance", fig.cap="Two estimates of a single population variance. We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.", }
 knitr::include_graphics("ch_samples/images/pool2.png")
 ```
 
 \newpage
 
-```{r pool3, echo=FALSE, out.width="80%", fig.scap="Pooled variance estimates population variance", fig.cap="We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance."}
+```{r pool3, echo=FALSE, out.width="80%", fig.scap="Pooled variance estimates population variance", fig.cap="Pooled variance estimates population variance. We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance."}
 knitr::include_graphics("ch_samples/images/pool3.png")
 ```
 
@@ -491,7 +491,7 @@ d_dist <- ggplot(data = many_samples,
 ggsave(filename = "ch_samples/images/d_dist.png", dpi = 300, width = 8, height = 6)
 ```
 
-```{r ddist, echo=FALSE, out.width="95%", fig.cap="Illustration of the range of sample unbiased d-values for a single population $\\delta = 1.49$"}
+```{r ddist, echo=FALSE, out.width="95%", fig.cap="Histogram of $d_{unbiased}$ when $\\delta = 1.49$"}
 knitr::include_graphics("ch_samples/images/d_dist.png")
 ```
 
