--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -161,7 +161,7 @@ print(my_graph)
 Exactly how does that aesthetic, aes(), command work? What happens when we put the data and mapping in the ggplot() command instead of the specific commands such as geom_col()? When we put data and the mapping arguments in the ggplot() command we set those attributes for the entire graph. To understand this, you need to know that ggplot uses an internal data set that I will call the "black box" data set (i.e., inside the [black box](https://en.wikipedia.org/wiki/Black_box) of ggpplot). To create a graph ggplot maps/copies columns from you data set (e.g., movie_data) to an internal data set. This internal data set is then used to create the graph. Figure \@ref(fig:showmap) below illustrates what is happening "inside the black box" when you create the graph using the code above.
 
 
-```{r, showmap, echo = FALSE, out.width = "70%", fig.cap="ggplot()'s internal data."}
+```{r, showmap, echo = FALSE, out.width = "70%", fig.cap="Internal data structure for ggplot"}
 knitr::include_graphics("ch_graphing/images/mapping.png")
 ```
 
@@ -183,7 +183,7 @@ my_graph <- ggplot(data = movie_data,
 print(my_graph)
 ```
 
-```{r, addfill,echo = FALSE, out.width = "70%", fig.cap="Adding a fill column to the internal data."}
+```{r, addfill,echo = FALSE, out.width = "70%", fig.cap="Adding a fill column to the internal data"}
 knitr::include_graphics("ch_graphing/images/mapping_fill.png")
 ```
 
