--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -38,19 +38,19 @@ To do the assignment required for this class you need to join the class workspac
 
 3. Click on the workspace link in the email or paste it into your web browser. You should see a screen like the one below in Figure \@ref(fig:join). Click on the Join button.
 
-```{r join, fig.cap="Screen shot of workspace join message.", echo = FALSE, out.width="70%"}
+```{r join, fig.cap="Screenshot of workspace join message", echo = FALSE, out.width="70%"}
 knitr::include_graphics("ch_introduction/images/screenshot_join.png")
 ```
 
 4. Then you should see the welcome message illustrated in Figure \@ref(fig:welcome). Above this message is the Projects menu option. Click on the word Project.
 
-```{r welcome, fig.cap="Screen shot of welcome messag", echo = FALSE, out.width="70%"}
+```{r welcome, fig.cap="Screenshot of welcome message", echo = FALSE, out.width="70%"}
 knitr::include_graphics("ch_introduction/images/screenshot_welcome.png")
 ```
 
 5. You should now see the First Project displayed as in \@ref(fig:assignment). Click the Start button. You will then move to a view of R Studio.
 
-```{r assignment, fig.cap="Screen shot of starting first assignment", echo = FALSE, out.width="70%"}
+```{r assignment, fig.cap="Screenshot of starting first assignment", echo = FALSE, out.width="70%"}
 knitr::include_graphics("ch_introduction/images/screenshot_assignment.png")
 ```
 
