--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -264,16 +264,85 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   base64enc_0.1.3 bookdown_0.19.1 compiler_4.0.2 
-##   digest_0.6.25   evaluate_0.14   glue_1.4.1     
-##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
-##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
-##   magrittr_1.5    markdown_1.1    methods_4.0.2  
-##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
-##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
-##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
-##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
-##   xfun_0.14       yaml_2.2.1
+##   abind_1.4.5              acepack_1.4.1           
+##   arm_1.11.1               askpass_1.1             
+##   assertthat_0.2.1         backports_1.1.8         
+##   base64enc_0.1-3          BH_1.72.0.3             
+##   bitops_1.0-6             bookdown_0.19.1         
+##   boot_1.3.25              broom_0.7.0.9000        
+##   callr_3.4.3              cellranger_1.1.0        
+##   checkmate_2.0.0          cli_2.0.2               
+##   clipr_0.7.0              cluster_2.1.0           
+##   coda_0.19.3              colorspace_1.4-1        
+##   compiler_4.0.2           crayon_1.3.4            
+##   curl_4.3                 data.table_1.12.8       
+##   DBI_1.1.0                dbplyr_1.4.3            
+##   desc_1.2.0               digest_0.6.25           
+##   dplyr_1.0.0              ellipsis_0.3.1          
+##   emoGG_0.0.2              evaluate_0.14           
+##   fansi_0.4.1              farver_2.0.3            
+##   forcats_0.5.0            foreign_0.8-80          
+##   Formula_1.2-3            fs_1.4.1                
+##   generics_0.0.2           ggplot2_3.3.2           
+##   glue_1.4.1               graphics_4.0.2          
+##   grDevices_4.0.2          grid_4.0.2              
+##   gridExtra_2.3            gsl_2.1.6               
+##   gtable_0.3.0             haven_2.3.1             
+##   highr_0.8                Hmisc_4.4-0             
+##   hms_0.5.3                htmlTable_2.0.0         
+##   htmltools_0.4.0          htmlwidgets_1.5.1       
+##   httr_1.4.1               isoband_0.2.2           
+##   janitor_2.0.1            jpeg_0.1-8.1            
+##   jsonlite_1.6.1           knitr_1.28              
+##   labeling_0.3             lattice_0.20-41         
+##   latticeExtra_0.6-29      lavaan_0.6.6            
+##   learnSampling_0.2        lifecycle_0.2.0         
+##   lme4_1.1.23              lubridate_1.7.8         
+##   magrittr_1.5             markdown_1.1            
+##   MASS_7.3.51.6            Matrix_1.2-18           
+##   matrixcalc_1.0.3         MBESS_4.7.0             
+##   methods_4.0.2            mgcv_1.8.31             
+##   mi_1.0                   mime_0.9                
+##   minqa_1.2.4              mnormt_2.0.1            
+##   modelr_0.1.8             munsell_0.5.0           
+##   mvtnorm_1.1.1            nlme_3.1-148            
+##   nloptr_1.2.2.2           nnet_7.3-14             
+##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
+##   openssl_1.4.1            packrat_0.5.0           
+##   parallel_4.0.2           pbapply_1.4.2           
+##   pbivnorm_0.6.0           pillar_1.4.6            
+##   pkgbuild_1.1.0           pkgconfig_2.0.3         
+##   pkgload_1.1.0            png_0.1-7               
+##   praise_1.0.0             predictionInterval_1.0.0
+##   prettyunits_1.1.1        processx_3.4.3          
+##   progress_1.2.2           proto_1.0.0             
+##   ps_1.3.3                 psych_1.9.12.31         
+##   purrr_0.3.4              R6_2.4.1                
+##   RColorBrewer_1.1-2       Rcpp_1.0.5              
+##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
+##   RCurl_1.98-1.2           readr_1.3.1             
+##   readxl_1.3.1             rematch_1.0.1           
+##   repr_1.1.0               reprex_0.3.0            
+##   rlang_0.4.7              rmarkdown_2.2           
+##   rpart_4.1-15             rpf_1.0.4               
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.3            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.2              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -338,7 +407,7 @@ To do the assignment required for this class you need to join the class workspac
 \end{enumerate}
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_join} \caption{Screen shot of workspace join message.}\label{fig:join}
+\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_join} \caption{Screenshot of workspace join message}\label{fig:join}
 \end{figure}
 
 \begin{enumerate}
@@ -350,7 +419,7 @@ To do the assignment required for this class you need to join the class workspac
 \end{enumerate}
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_welcome} \caption{Screen shot of welcome messag}\label{fig:welcome}
+\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_welcome} \caption{Screenshot of welcome message}\label{fig:welcome}
 \end{figure}
 
 \begin{enumerate}
@@ -362,7 +431,7 @@ To do the assignment required for this class you need to join the class workspac
 \end{enumerate}
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_assignment} \caption{Screen shot of starting first assignment}\label{fig:assignment}
+\includegraphics[width=0.7\linewidth]{ch_introduction/images/screenshot_assignment} \caption{Screenshot of starting first assignment}\label{fig:assignment}
 \end{figure}
 
 \begin{enumerate}
@@ -517,23 +586,6 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
 Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
-
-\begin{verbatim}
-## -- Attaching packages ------------------- tidyverse 1.3.0 --
-\end{verbatim}
-
-\begin{verbatim}
-## v ggplot2 3.3.2     v purrr   0.3.4
-## v tibble  3.0.3     v dplyr   1.0.0
-## v tidyr   1.1.0     v stringr 1.4.0
-## v readr   1.3.1     v forcats 0.5.0
-\end{verbatim}
-
-\begin{verbatim}
-## -- Conflicts ---------------------- tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()
-\end{verbatim}
 
 When you use library(tidyverse) to activate the tidyverse you activate the most commonly used subset of the tidyverse packages. In the output you see checkmarks beside names of the tidyverse packages you have activated.
 
@@ -2214,7 +2266,7 @@ In this chapter we will walk you though the steps from data collection, data ent
 It's critical that you don't think of the analysis of your data as being completely removed from the data collection and data entry choices you make. Poor choices at the data collection and data entry stage can make your life substantially more complicated when it comes time to write the pre-processing script that will convert your raw data to analytic data. The mantra of this chapter is \emph{begin with the end in mind}.
 
 \begin{figure}
-\includegraphics[width=0.85\linewidth]{ch_enter_load/images/pipeline} \caption{Data science pipeline by Roger Peng.}\label{fig:pipeline}
+\includegraphics[width=0.85\linewidth]{ch_enter_load/images/pipeline} \caption{Data science pipeline by Roger Peng}\label{fig:pipeline}
 \end{figure}
 
 It's difficult to being with the end in mind when you haven't read later chapters. So, here we will be provide you with some general thoughts around different approaches to structuring data files and the naming conventions you can use when creating those data files.
@@ -4926,7 +4978,7 @@ In this calculation the numerator represents the difference between the two popu
 Because the unit for the standardized mean difference is the standard deviation it can be easy to interpret if you are unfamiliar with the original units. It is usually a good idea to report the difference between populations in both the original units (cm) and standardized units (\(\delta\)). Figure \ref{fig:dex1} illustrates three different population difference scenarios (A through C). The population standard deviation is held constant across the three scenarios. You can see that as the difference between the population means increases in raw units - it does the same in \(\delta\) (i.e., Cohen's \(d\)) units. In raw units (i.e., cm), the difference between the population means for scenarios A through C are 5 cm, 10 cm, and 20 cm, respectively. In standardized units (i.e., standard deviations), the difference the between the population means for scenarios A through C are 0.50 standard deviations, 1.0 standard deviations, and 2.0 standard deviations, respectively. In other words, the population-level Cohen's \(d\)-values are 0.50, 1.0, and 2.0 for scenarios A through C.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex1} \caption[Illustrating standardized mean difference.]{The difference between two population means can be expressed in the original units as indicated by $\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also known as the population-level $d$-value and is represented by the symbol $\delta$. The SMD is a way of expressing the difference between population means without using the original units. }\label{fig:dex1}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex1} \caption[Illustrating standardized mean difference]{The difference between two population means can be expressed in the original units as indicated by $\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also known as the population-level $d$-value and is represented by the symbol $\delta$. The SMD is a way of expressing the difference between population means without using the original units. }\label{fig:dex1}
 \end{figure}
 
 \hypertarget{cohens-d-advantages}{%
@@ -4935,7 +4987,7 @@ Because the unit for the standardized mean difference is the standard deviation 
 The standardized mean difference takes into account the variability of heights around each population mean. This means that the same difference between two population means can produce different standardized mean difference values if the population standard deviation varies. In the scenarios depicted in Figure \ref{fig:dex2} the population standard deviation becomes increasing small - resulting in larger standardized mean difference values (i.e., \(\delta\)). This larger \(\delta\) value corresponds to progressively less overlap between the two populations. Thus, taking into account the standard deviation of the populations can be viewed as a strength of using the standardized mean difference.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex2} \caption[Advantages of standadized mean difference.]{An advantage of using the Standardized Mean Difference (SMD) to index the difference between two population means (i.e., $\delta$) is that it takes the population standard deviation into account. In these three examples, the difference between the populations means is the same using the original/raw units of centimeters. However, the standard deviation of the populations varies across scenarios A, B, and C. The SMD illustrates that these three scenarios are different. If you only examined the difference in the original units (i.e., $\Delta M$) you would conclude the effect is the same across the three scenarios. However, by using SMD, indexed by $\delta$ - the population $d$-value, you see that the effect is progressively stronger from scenario A, to B, to C. This is illustrated by the fact that there is progressively less overlap between the distributions as you move from scenario A to C.}\label{fig:dex2}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex2} \caption[Advantages of standadized mean difference]{An advantage of using the Standardized Mean Difference (SMD) to index the difference between two population means (i.e., $\delta$) is that it takes the population standard deviation into account. In these three examples, the difference between the populations means is the same using the original/raw units of centimeters. However, the standard deviation of the populations varies across scenarios A, B, and C. The SMD illustrates that these three scenarios are different. If you only examined the difference in the original units (i.e., $\Delta M$) you would conclude the effect is the same across the three scenarios. However, by using SMD, indexed by $\delta$ - the population $d$-value, you see that the effect is progressively stronger from scenario A, to B, to C. This is illustrated by the fact that there is progressively less overlap between the distributions as you move from scenario A to C.}\label{fig:dex2}
 \end{figure}
 
 \hypertarget{cohens-d-caveats}{%
@@ -4944,7 +4996,7 @@ The standardized mean difference takes into account the variability of heights a
 It is important to also look at the original units when interpreting results - not just the standardized mean difference. Examine the scenarios in Figure \ref{fig:dex3}. Notice how the \(\delta\) value stays constant across scenarios - as does the overlap of the two distributions. However, inspect the shape of the curves and the original units to see how the scenarios vary. Both the original units and the standardized mean difference (i.e., Cohen's \(d\)) provide important interpretational information - don't rely on just one of them.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex3} \caption[Caveats for standardized mean difference.]{The three scenarios in this figure illustrate that a Standardized Mean Difference (i.e., population $d$-value or $\delta$) can remain constant across scenarios when there is a change in the raw difference (i.e., $\Delta M$) between the population means. This SMD is consistent across the three scenario despite a change in the mean difference using original units; this occurs because the standard deviations also changes across the three scenarios.}\label{fig:dex3}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex3} \caption[Caveats for standardized mean difference]{The three scenarios in this figure illustrate that a Standardized Mean Difference (i.e., population $d$-value or $\delta$) can remain constant across scenarios when there is a change in the raw difference (i.e., $\Delta M$) between the population means. This SMD is consistent across the three scenario despite a change in the mean difference using original units; this occurs because the standard deviations also changes across the three scenarios.}\label{fig:dex3}
 \end{figure}
 
 \hypertarget{benchmarks}{%
@@ -4953,7 +5005,7 @@ It is important to also look at the original units when interpreting results - n
 Cohen suggested that the standardized mean difference values of 0.20, 0.50, and 0.80 correspond to the effect size labels of small, medium, and large, respectively \citep{cohen1988}. These effect sizes are illustrated in Figure \ref{fig:dex4}. As described in an interesting \href{https://replicationindex.com/2015/09/22/the-statistical-power-of-abnormal-social-psychological-research-a-revew-by-jacob-cohen/}{blog post}, these benchmark values came from reviewing a single issue of the \emph{Journal of Abnormal and Social Psychology}. Basing benchmarks on such a small number of studies is potentially problematic - as is the fact that the that time all the studies were prone to publication bias. A recent investigation \citep[see][]{schafer2019meaningfulness} of effect sizes in pre-registered studies, with no publication bias, suggests substantially lower benchmark values.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex4} \caption{Cohen's (1988) effect size benchmarks.}\label{fig:dex4}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex4} \caption{Cohen's (1988) effect size benchmarks}\label{fig:dex4}
 \end{figure}
 
 You can visualize any \(\delta\) value (i.e., population \(d\)-value) using the rpsychologist \href{https://rpsychologist.com/d3/cohend/}{website}. This website also provides a number of interesting statistics such as the percentage of overlapping values in two populations for a given \(\delta\)/d value.
@@ -5355,7 +5407,7 @@ Likewise, the population-level standardized mean difference (\(\delta\)) is 1.49
 \]
 
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption[Illustration of standardized mean difference of 1.49]{Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption[Illustration of standardized mean difference of $\delta =1.49$]{Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
 \end{figure}
 
 We typical need to estimate the population-level standardized mean difference from sample data because we rarely have access to data for an entire population. Many researchers estimate the population standardized mean difference from sample data using the Formula \eqref{eq:samplesmdch5} below. This value is known by many other names: \(d\), Cohen's \(d\), and Hedges \(g\). Notice that the sample-level formula, Formula \eqref{eq:samplesmdch5}, below, is the same as the population-level formula, Formula \eqref{eq:popsmdch5}, above, only the notation differs.
@@ -5410,19 +5462,19 @@ We have a sample variance for males () and a sample variance for females (). We 
 \newpage
 
 \begin{figure}
-\includegraphics[width=0.8\linewidth]{ch_samples/images/pool1} \caption[Estimating population variance with sample variances]{The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. }\label{fig:pool1}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool1} \caption[Estimating population variances with sample variances]{Estimating population variances with sample variances. The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. }\label{fig:pool1}
 \end{figure}
 
 \vspace{25mm}
 
 \begin{figure}
-\includegraphics[width=0.8\linewidth]{ch_samples/images/pool2} \caption[Sample variances of estimates of the sample population variance.]{We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.}\label{fig:pool2}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool2} \caption[Two estimates of a single population variance]{Two estimates of a single population variance. We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.}\label{fig:pool2}
 \end{figure}
 
 \newpage
 
 \begin{figure}
-\includegraphics[width=0.8\linewidth]{ch_samples/images/pool3} \caption[Pooled variance estimates population variance]{We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance.}\label{fig:pool3}
+\includegraphics[width=0.8\linewidth]{ch_samples/images/pool3} \caption[Pooled variance estimates population variance]{Pooled variance estimates population variance. We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance.}\label{fig:pool3}
 \end{figure}
 
 When the sample sizes for males and females are the same (i.e., \(n_{males} =n_{females}\)) we can use the Formula \eqref{eq:poolvarequalch5} below to calculate the pooled variance.
@@ -5565,7 +5617,7 @@ You can see the mean of the \(d\) values is 1.56 which is higher than the popula
 An inspection of the first few rows of the the of many\_samples data above illustrated that many of the \(d_{unbiased}\) values differed from the population-level standardized mean difference of \(\delta = 1.49\). We can see the variability in sample-level \(d_{unbiased}\) values in the histogram below.
 
 \begin{figure}
-\includegraphics[width=0.95\linewidth]{ch_samples/images/d_dist} \caption{Illustration of the range of sample unbiased d-values for a single population $\delta = 1.49$}\label{fig:ddist}
+\includegraphics[width=0.95\linewidth]{ch_samples/images/d_dist} \caption{Histogram of $d_{unbiased}$ when $\delta = 1.49$}\label{fig:ddist}
 \end{figure}
 
 We can calculate the full range of sample-level \(d_{unbiased}\) values with the commands below:
@@ -5909,7 +5961,7 @@ Examine the code below and compare it to the code above. Notice how in the geom\
 Exactly how does that aesthetic, aes(), command work? What happens when we put the data and mapping in the ggplot() command instead of the specific commands such as geom\_col()? When we put data and the mapping arguments in the ggplot() command we set those attributes for the entire graph. To understand this, you need to know that ggplot uses an internal data set that I will call the ``black box'' data set (i.e., inside the \href{https://en.wikipedia.org/wiki/Black_box}{black box} of ggpplot). To create a graph ggplot maps/copies columns from you data set (e.g., movie\_data) to an internal data set. This internal data set is then used to create the graph. Figure \ref{fig:showmap} below illustrates what is happening ``inside the black box'' when you create the graph using the code above.
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping} \caption{ggplot()'s internal data.}\label{fig:showmap}
+\includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping} \caption{Internal data structure for ggplot}\label{fig:showmap}
 \end{figure}
 
 \hypertarget{fill-color}{%
@@ -5934,7 +5986,7 @@ You might want to influence the color of the bars in the graph such that the bar
 \includegraphics{bookdown_files/figure-latex/unnamed-chunk-242-1.pdf}
 
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping_fill} \caption{Adding a fill column to the internal data.}\label{fig:addfill}
+\includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping_fill} \caption{Adding a fill column to the internal data}\label{fig:addfill}
 \end{figure}
 
 \hypertarget{overriding-aes}{%
